--- a/liftwell/Base.lproj/Main.storyboard
+++ b/liftwell/Base.lproj/Main.storyboard
@@ -612,6 +612,83 @@
             </objects>
             <point key="canvasLocation" x="1406" y="1038"/>
         </scene>
+        <!--Weights Controller-->
+        <scene sceneID="8nc-KY-u95">
+            <objects>
+                <viewController storyboardIdentifier="WeightsControllerID" useStoryboardIdentifierAsRestorationIdentifier="YES" id="x3T-nK-COM" customClass="WeightsController" customModule="liftwell" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="RvK-qE-ii7">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="svL-ud-OEa">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <items>
+                                    <navigationItem id="zT5-JL-fe0">
+                                        <barButtonItem key="leftBarButtonItem" title="Done" id="p6s-d3-uU7">
+                                            <connections>
+                                                <action selector="donePressed:" destination="x3T-nK-COM" id="U3V-N6-2rd"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Breadcrumb" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KBa-Hg-DWj">
+                                <rect key="frame" x="150" y="20" width="75" height="16"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="NRR-Py-zl0">
+                                <rect key="frame" x="0.0" y="66" width="375" height="557"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="separatorColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="checkmark" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="WeightCellID" textLabel="XZ9-6F-m4I" style="IBUITableViewCellStyleDefault" id="45q-wc-qP5">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="45q-wc-qP5" id="eCX-f4-JLF">
+                                            <rect key="frame" x="0.0" y="0.0" width="336" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="XZ9-6F-m4I">
+                                                    <rect key="frame" x="15" y="0.0" width="321" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="KBa-Hg-DWj" firstAttribute="centerX" secondItem="RvK-qE-ii7" secondAttribute="centerX" id="1dq-zV-Ur7"/>
+                            <constraint firstItem="svL-ud-OEa" firstAttribute="top" secondItem="NRR-Py-zl0" secondAttribute="bottom" id="63y-bn-BaU"/>
+                            <constraint firstItem="NRR-Py-zl0" firstAttribute="top" secondItem="KBa-Hg-DWj" secondAttribute="bottom" constant="30" id="7tS-FE-VJc"/>
+                            <constraint firstItem="svL-ud-OEa" firstAttribute="bottom" secondItem="U9R-F7-rAN" secondAttribute="bottom" id="W3t-7B-wWG"/>
+                            <constraint firstItem="NRR-Py-zl0" firstAttribute="leading" secondItem="U9R-F7-rAN" secondAttribute="leading" id="cJH-Mm-roA"/>
+                            <constraint firstItem="svL-ud-OEa" firstAttribute="leading" secondItem="U9R-F7-rAN" secondAttribute="leading" id="ez8-oi-eTV"/>
+                            <constraint firstItem="U9R-F7-rAN" firstAttribute="trailing" secondItem="NRR-Py-zl0" secondAttribute="trailing" id="f2x-BB-U6V"/>
+                            <constraint firstItem="KBa-Hg-DWj" firstAttribute="top" secondItem="U9R-F7-rAN" secondAttribute="top" id="iML-P3-D6M"/>
+                            <constraint firstItem="svL-ud-OEa" firstAttribute="trailing" secondItem="U9R-F7-rAN" secondAttribute="trailing" id="rBE-6s-voH"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="U9R-F7-rAN"/>
+                    </view>
+                    <connections>
+                        <outlet property="breadcrumbLabel" destination="KBa-Hg-DWj" id="Xf7-rl-pJI"/>
+                        <outlet property="doneButton" destination="p6s-d3-uU7" id="YzE-wK-J0X"/>
+                        <outlet property="tableView" destination="NRR-Py-zl0" id="tCJ-Xa-g7r"/>
+                        <segue destination="HWo-Dd-KBP" kind="unwind" identifier="unwindToDumbbellID" unwindAction="unwindToDumbbell:" id="WqW-sg-a1E"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xCZ-Qt-gxx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="HWo-Dd-KBP" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="2057" y="1038"/>
+        </scene>
         <!--Timed Option Controller-->
         <scene sceneID="QhA-Fi-4Uj">
             <objects>
